fixes #6823 datatables UI auto overflow

--- a/themes/Bluebird/css/Bluebird.css
+++ b/themes/Bluebird/css/Bluebird.css
@@ -1719,3 +1719,6 @@ div#contact-summary div#contactTopBar {
   border-color: #8BB381;
   color: #333;
 }
+.dataTables_wrapper {
+  overflow: auto;
+}
